# rmf_project_template

./: .gitignore  .gitmodules  README.md
src/fyp/fyp/: CMakeLists.txt  package.xml
src/fyp/fyp/config/simple_warehouse/: deliveryRobot_config.yaml
src/fyp/fyp/launch/: common.launch.xml  dashboard.launch.xml  simple_I_travel.launch.xml  simple_warehouse.launch.xml
src/fyp/fyp/launch/include/simple_I_travel/: simple_I_travel.rviz  simple_I_travel_loop.launch.xml
src/fyp/fyp/launch/include/simple_warehouse/: simple_warehouse_patrol.launch.xml
src/fyp/fyp_assets/: CMakeLists.txt  package.xml
src/fyp/fyp_assets/assets/thumbnails/: model_list.yaml
src/fyp/fyp_assets/env_hook/: add_models_dir_to_gazebo_path.sh.in
src/fyp/fyp_assets/models/pallet/: model.sdf
src/fyp/fyp_assets/models/pallet_box_mobile/: model.sdf
src/fyp/fyp_assets/models/shelfEmpty/: model.config  model.sdf
src/fyp/fyp_assets/models/shelfEmpty/meshes/: shelf_empty_movai.dae
src/fyp/fyp_dashboard_resources/: CMakeLists.txt  package.xml
src/fyp/fyp_dashboard_resources/simple_warehouse/: dashboard_config.json
src/fyp/fyp_fleet_adapter/: config.yaml  package.xml  setup.cfg  setup.py
src/fyp/fyp_fleet_adapter/fyp_fleet_adapter/: RobotClientAPI.py  fleet_manager.py
src/fyp/fyp_fleet_adapter/launch/: fleet_adapter.launch.xml
src/fyp/fyp_gz_classic/: CMakeLists.txt  package.xml
src/fyp/fyp_gz_classic/launch/: simple_I_travel.launch.xml  simple_warehouse.launch.xml  simulation.launch.xml
src/fyp/fyp_maps/: CMakeLists.txt  package.xml
src/fyp/fyp_maps/maps/simple_I_travel/: simple_I_travel.building.yaml
src/fyp/fyp_maps/maps/simple_warehouse/: simple_warehouse.building.yaml  temp.building.yaml
src/fyp/fyp_panel/: package.xml  setup.cfg  setup.py
src/fyp/fyp_panel/fyp_panel/: dispatcher_client.py  simple_api_server.py
src/fyp/fyp_tasks/: package.xml  setup.cfg  setup.py
src/fyp_assets/: CMakeLists.txt  package.xml
src/prj_name/prj_name/: CMakeLists.txt  package.xml
src/prj_name/prj_name/config/simple_warehouse/: tinyRobot_config.yaml
src/prj_name/prj_name/launch/: common.launch.xml  dashboard.launch.xml  simple_warehouse.launch.xml
src/prj_name/prj_name/launch/include/simple_warehouse/: simple_warehouse_patrol.launch.xml
src/prj_name/prj_name_assets/: CMakeLists.txt  package.xml
src/prj_name/prj_name_assets/assets/thumbnails/: model_list.yaml
src/prj_name/prj_name_assets/models/pallet_box_mobile/: model.sdf
src/prj_name/prj_name_dashboard_resources/: CMakeLists.txt  build_configuration.py  package.xml
src/prj_name/prj_name_fleet_adapter/: package.xml  setup.cfg  setup.py
src/prj_name/prj_name_fleet_adapter/launch/: fleet_adapter.launch.xml
src/prj_name/prj_name_fleet_adapter/prj_name_fleet_adapter/: RobotClientAPI.py  fleet_manager.py
src/prj_name/prj_name_gz_classic/: CMakeLists.txt  package.xml
src/prj_name/prj_name_gz_classic/launch/: simple_warehouse.launch.xml  simulation.launch.xml
src/prj_name/prj_name_maps/: CMakeLists.txt  package.xml
src/prj_name/prj_name_panel/: package.xml  setup.cfg  setup.py
src/prj_name/prj_name_panel/prj_name_panel/: dispatcher_client.py  simple_api_server.py
src/prj_name/prj_name_tasks/: package.xml  setup.cfg  setup.py
