<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fyp_assets</name>
  <version>0.0.0</version>
  <description>Assets used in the final year project</description>
  <maintainer email="josiahbrough@gmail.com">Josiah</maintainer>
  <license>MIT-0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
