<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prj_name_panel</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="josiahbrough@gmail.com">josiah</maintainer>
  <license>MIT-0</license>

  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-flask-cors</exec_depend>
  <exec_depend>python3-websockets</exec_depend>

  <exec_depend>rmf_fleet_msgs</exec_depend>
  <exec_depend>rmf_task_msgs</exec_depend>
  <exec_depend>prj_name_dashboard_resources</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>